Added git ignore to ignore class files